src/objects/Job__c.object
<CustomObject>
    <fields>
        <fullName>Desired_Number_of_Employees__c</fullName>
        <label>Desired Number of Employees</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employees_in_Job__c</fullName>
        <label>Employees in Job</label>
        <summaryForeignKey>Employee_Job__c.Job__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Job_ID__c</fullName>
        <description>This required field on the Job object allows for a user to input
a 10-digit Job ID. Should be tagged as an external ID.</description>
        <label>Job ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Type__c</fullName>
        <label>Job Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Management/Leadership</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
                <value>
                    <fullName>Administrative</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_Salary__c</fullName>
        <label>Max Salary</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Salary__c</fullName>
        <description>This required field on the Job object accepts and displays the
salary floor of a job.</description>
        <label>Min Salary</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Job</label>
    <nameField>
        <label>Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>